--- a/QPest/MonotoringStoryboard.storyboard
+++ b/QPest/MonotoringStoryboard.storyboard
@@ -66,6 +66,36 @@
             </objects>
             <point key="canvasLocation" x="-40" y="-376.46176911544228"/>
         </scene>
+        <!--Monitoring Map View Controller-->
+        <scene sceneID="oG7-y7-aX4">
+            <objects>
+                <viewController id="5Kl-or-1nD" customClass="MonitoringMapViewController" customModule="QPest" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="cMV-Tw-pIE"/>
+                        <viewControllerLayoutGuide type="bottom" id="FjK-dE-Bll"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Sb5-n4-64L">
+                        <rect key="frame" x="0.0" y="64" width="384" height="603"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="uhl-mQ-zBe"/>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="uhl-mQ-zBe" firstAttribute="top" secondItem="cMV-Tw-pIE" secondAttribute="bottom" id="1RU-fS-LKL"/>
+                            <constraint firstItem="FjK-dE-Bll" firstAttribute="top" secondItem="uhl-mQ-zBe" secondAttribute="bottom" id="DD1-3M-COV"/>
+                            <constraint firstAttribute="trailing" secondItem="uhl-mQ-zBe" secondAttribute="trailing" id="GJu-Z2-VN2"/>
+                            <constraint firstItem="uhl-mQ-zBe" firstAttribute="leading" secondItem="Sb5-n4-64L" secondAttribute="leading" id="HWE-EY-sja"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="mapView" destination="uhl-mQ-zBe" id="wgM-GY-R47"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1ya-sg-N8X" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-763.20000000000005" y="295.50224887556226"/>
+        </scene>
         <!--Monitoring Single View Controller-->
         <scene sceneID="REJ-mg-74U">
             <objects>
@@ -78,25 +108,37 @@
                         <rect key="frame" x="0.0" y="64" width="384" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4Uv-N1-gJC">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="305" id="azP-qe-XYV"/>
+                                    <constraint firstAttribute="width" constant="384" id="see-YZ-80w"/>
+                                </constraints>
+                            </imageView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="36w-US-oMU">
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="36w-US-oMU" firstAttribute="top" secondItem="4Uv-N1-gJC" secondAttribute="bottom" id="7QZ-YL-1tO"/>
                             <constraint firstItem="l4e-Zo-ZTJ" firstAttribute="top" secondItem="36w-US-oMU" secondAttribute="bottom" id="OOD-nP-yPe"/>
-                            <constraint firstItem="36w-US-oMU" firstAttribute="top" secondItem="YEd-gY-BHe" secondAttribute="top" id="V9d-vy-H59"/>
+                            <constraint firstItem="4Uv-N1-gJC" firstAttribute="top" secondItem="Jiq-aa-jf8" secondAttribute="bottom" id="RDj-Oy-Wan"/>
+                            <constraint firstItem="36w-US-oMU" firstAttribute="top" secondItem="YEd-gY-BHe" secondAttribute="top" constant="305" id="V9d-vy-H59"/>
                             <constraint firstAttribute="trailing" secondItem="36w-US-oMU" secondAttribute="trailing" id="gxS-A1-034"/>
+                            <constraint firstAttribute="trailing" secondItem="4Uv-N1-gJC" secondAttribute="trailing" id="rPb-dt-x06"/>
+                            <constraint firstItem="4Uv-N1-gJC" firstAttribute="leading" secondItem="YEd-gY-BHe" secondAttribute="leading" id="u2E-ud-B5f"/>
                             <constraint firstItem="36w-US-oMU" firstAttribute="leading" secondItem="YEd-gY-BHe" secondAttribute="leading" id="xEY-5t-Xht"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="logImage" destination="4Uv-N1-gJC" id="dzX-ad-9NI"/>
                         <outlet property="tableView" destination="36w-US-oMU" id="NLV-wi-4qe"/>
+                        <segue destination="5Kl-or-1nD" kind="show" identifier="goMapView" id="Xuj-5C-5h5"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oAg-da-Pbn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-47.200000000000003" y="295.50224887556226"/>
+            <point key="canvasLocation" x="-48" y="295.50224887556226"/>
         </scene>
         <!--Monitoring Add New Log View Controller-->
         <scene sceneID="frK-kP-fCm">
