--- a/QPest/ActionPragueHeaderTableViewCell.xib
+++ b/QPest/ActionPragueHeaderTableViewCell.xib
@@ -9,19 +9,20 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="pragueHeader" rowHeight="54" id="KGk-i7-Jjw" customClass="ActionPragueHeaderTableViewCell" customModule="QPest" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="353" height="54"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="pragueHeader" rowHeight="72" id="KGk-i7-Jjw" customClass="ActionPragueHeaderTableViewCell" customModule="QPest" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="384" height="72"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <frame key="frameInset" width="353" height="53.5"/>
+                <frame key="frameInset" width="384" height="71"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h7Z-KR-FvP">
                         <attributedString key="attributedText">
-                            <fragment content="Label">
+                            <fragment content="EUSCHITUS HEROS">
                                 <attributes>
-                                    <color key="NSColor" red="0.049700797872340427" green="0.04864409194528875" blue="0.034123290273556234" alpha="1" colorSpace="calibratedRGB"/>
-                                    <font key="NSFont" size="17" name="AvenirNext-Regular"/>
+                                    <color key="NSColor" red="0.049700797872340427" green="0.04864409194528875" blue="0.034123290273556234" alpha="0.79742788461538461" colorSpace="calibratedRGB"/>
+                                    <font key="NSFont" size="14" name="Avenir-Book"/>
+                                    <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                 </attributes>
                             </fragment>
                         </attributedString>
@@ -33,21 +34,41 @@
                             <constraint firstAttribute="height" constant="21" id="taw-a5-oQO"/>
                         </constraints>
                     </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qpB-oO-625">
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="0Nn-tx-y5l"/>
+                            <constraint firstAttribute="width" constant="320" id="R0W-Mk-6pF"/>
+                        </constraints>
+                        <attributedString key="attributedText">
+                            <fragment content="Percevejo-marrom">
+                                <attributes>
+                                    <color key="NSColor" red="0.0" green="0.0" blue="0.0" alpha="0.92128605769230765" colorSpace="calibratedRGB"/>
+                                    <font key="NSFont" size="18" name="Avenir-Roman"/>
+                                </attributes>
+                            </fragment>
+                        </attributedString>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="h7Z-KR-FvP" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="8" id="Had-tp-yfX"/>
-                    <constraint firstItem="h7Z-KR-FvP" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="14" id="Yr9-oI-ANK"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="myi-iD-ZvF" secondAttribute="bottom" constant="8.5" id="ZDK-Ck-LTq"/>
-                    <constraint firstItem="myi-iD-ZvF" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="8" id="ZlP-Qa-YXA"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="h7Z-KR-FvP" secondAttribute="bottom" constant="8.5" id="acA-UB-MwD"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="myi-iD-ZvF" secondAttribute="trailing" constant="14" id="cx6-s1-ish"/>
-                    <constraint firstItem="h7Z-KR-FvP" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="uen-qv-IrC"/>
+                    <constraint firstItem="qpB-oO-625" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="3" id="EFb-0m-mYv"/>
+                    <constraint firstItem="h7Z-KR-FvP" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="3" id="Had-tp-yfX"/>
+                    <constraint firstItem="h7Z-KR-FvP" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="3" id="Yr9-oI-ANK"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="myi-iD-ZvF" secondAttribute="bottom" constant="17" id="ZDK-Ck-LTq"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="qpB-oO-625" secondAttribute="bottom" constant="4" id="ZNP-bg-Cbz"/>
+                    <constraint firstItem="myi-iD-ZvF" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="18" id="ZlP-Qa-YXA"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="h7Z-KR-FvP" secondAttribute="bottom" constant="28" id="acA-UB-MwD"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="myi-iD-ZvF" secondAttribute="trailing" constant="7" id="cx6-s1-ish"/>
+                    <constraint firstItem="h7Z-KR-FvP" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" constant="-45" id="uen-qv-IrC"/>
+                    <constraint firstItem="qpB-oO-625" firstAttribute="top" secondItem="h7Z-KR-FvP" secondAttribute="bottom" constant="3" id="z0J-QT-fXR"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="pragueTitle" destination="h7Z-KR-FvP" id="Egd-j0-i23"/>
+                <outlet property="arrow" destination="myi-iD-ZvF" id="b2q-H5-GnB"/>
+                <outlet property="pragueCommonName" destination="qpB-oO-625" id="UH8-tf-liY"/>
+                <outlet property="pragueScientificName" destination="h7Z-KR-FvP" id="p24-ZN-1ir"/>
             </connections>
-            <point key="canvasLocation" x="50.5" y="59"/>
+            <point key="canvasLocation" x="50" y="68"/>
         </tableViewCell>
     </objects>
     <resources>
