--- a/QPest/MonitoringSingleTableViewCell.xib
+++ b/QPest/MonitoringSingleTableViewCell.xib
@@ -12,12 +12,11 @@
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="monitoringSingleCell" rowHeight="77" id="KGk-i7-Jjw" customClass="MonitoringSingleTableViewCell" customModule="QPest" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="384" height="77"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <frame key="frameInset" width="384" height="76"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mf0-8A-Fzq">
-                        <frame key="frameInset" minX="18" minY="15" width="358" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mf0-8A-Fzq">
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="eSs-kM-h1J"/>
                             <constraint firstAttribute="width" constant="358" id="jgj-gr-IzW"/>
@@ -33,8 +32,7 @@
                         </attributedString>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PrP-br-JoE">
-                        <frame key="frameInset" minX="18" minY="42" width="358" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PrP-br-JoE">
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="WbY-Yc-C1o"/>
                             <constraint firstAttribute="width" constant="358" id="hHH-js-aiZ"/>
@@ -50,13 +48,13 @@
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailingMargin" secondItem="mf0-8A-Fzq" secondAttribute="trailing" id="QWg-mC-tbF"/>
-                    <constraint firstItem="PrP-br-JoE" firstAttribute="top" secondItem="mf0-8A-Fzq" secondAttribute="bottom" constant="6" id="Yhn-8g-sZh"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="mf0-8A-Fzq" secondAttribute="bottom" constant="33" id="caa-S2-QWk"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="PrP-br-JoE" secondAttribute="trailing" id="nsN-az-R2L"/>
-                    <constraint firstItem="mf0-8A-Fzq" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="7" id="wiI-ri-Xyw"/>
-                    <constraint firstItem="mf0-8A-Fzq" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="10" id="wjO-pR-cRr"/>
-                    <constraint firstItem="PrP-br-JoE" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="10" id="ywl-W3-Zz0"/>
+                    <constraint firstItem="mf0-8A-Fzq" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="10" id="EOy-bM-Rtk"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="PrP-br-JoE" secondAttribute="bottom" constant="5" id="Lhm-Q1-Hnq"/>
+                    <constraint firstItem="PrP-br-JoE" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="34" id="WqB-II-Ly1"/>
+                    <constraint firstItem="PrP-br-JoE" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="10" id="XjR-bz-Tfo"/>
+                    <constraint firstItem="mf0-8A-Fzq" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="7" id="nnM-7D-3RJ"/>
+                    <constraint firstItem="PrP-br-JoE" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="uzm-pi-R3w"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="mf0-8A-Fzq" secondAttribute="trailing" id="wWt-67-qY2"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
